k8s/apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: apps
  labels:
    app: apps-ingress
spec:
  rules:
    - host: me.apps.karma.run.place
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-march
                port:
                  number: 80
